Popular Cards Adjust

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
         <div class="bg-[#EFEBE3] lg:p-36 px-4 pt-12 ">
             <h3 class="text-4xl font-semibold text-[#179800] pb-12">Popular Products</h3>
             <div class="flex flex-col justify-between items-center mx-4  lg:flex-row">
-            <div class="bg-gradient-to-r from-[#53DB3A] to-white pt-11 pl-7">
+            <div class="flex-1 bg-gradient-to-r from-[#53DB3A] to-white pt-11 pl-7 rounded-lg">
                 <h3 class="text-white font-normal text-2xl adlam-font mb-5 lg:text-3xl">30% Off</h3>
                 <p class="font-normal text-sm text-[#111111]/7 mb-4 lg:text-base pr-12">Discover a world to treats, toys, and <br> essentials handpicked for</p>
                 <button class="btn bg-white text-[#111111] font-normal text-base lg:text-xl">Buy Now</button>
-                <div class="flex justify-end max-h-48   ">
-                    <img src="./c2-assets/vegetable-offer.png" alt="Vegatable Image " >
+                <div class="flex justify-end">
+                    <img src="./c2-assets/vegetable-offer.png" alt="Vegatable Image " class="w-1/2 h-1/2" >
                 </div>
             </div>
 
@@ -305,7 +305,7 @@
                               <span class="space-x-3"> 4.5</span>
                             </div>
                           
-                          <h3 class="text-xl">Potatooo 1 kg</h3>
+                          <h3 class="text-xl">Potato 1 kg</h3>
                           <h3 class="">$39.99</h3>
                         </div> 
                       </div>
