Data theme added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
-    <meta charset="UTF-8" data-theme="light">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature's Platter</title>
     <style>
@@ -464,36 +464,40 @@
   
             <div class="hero ">
               <div class="hero-content flex flex-col justify-center lg:flex-row space-x-24">
-                <div>
+                <div class="w-1/2">
                   <img
                   src="./c2-assets/faq.png"
                   class="max-w-sm rounded-lg shadow-2xl" />
                 </div>
+
+                <div class="flex justify-center items-center">
                 <div class="space-y-3">
                   <div class="collapse collapse-arrow border border-blue-100 ">
                     <input type="radio" name="my-accordion-2" checked="checked" />
-                    <div class="collapse-title text-xl font-medium">What are the most important things I should
-                      know about riding a bike?</div>
+                    <div class="collapse-title text-xl font-medium">What types of vegetables do you sell?</div>
                     <div class="collapse-content">
-                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                      <p>We offer a wide variety of fresh vegetables, including leafy greens, root vegetables, seasonal produce, and organic options. </p>
                     </div>
                   </div>
+
                   <div class="collapse collapse-arrow border border-blue-100 ">
                     <input type="radio" name="my-accordion-2" />
-                    <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
-                      new one?</div>
+                    <div class="collapse-title text-xl font-medium">Do you sell organic vegetables?</div>
                     <div class="collapse-content">
-                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                      <p>Yes, we have a selection of organic vegetables grown without pesticides or chemicals.</p>
                     </div>
                   </div>
+
                   <div class="collapse collapse-arrow border border-blue-100 ">
                     <input type="radio" name="my-accordion-2" />
-                    <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                    <div class="collapse-title text-xl font-medium">Where do you source your vegetables from</div>
                     <div class="collapse-content">
-                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                      <p>We source our vegetables from local farmers and trusted suppliers to ensure the freshest and highest quality produce.</p>
                     </div>
                   </div>
+
                 </div>
+            </div>
               </div>
             </div>
   
