--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
             <div class="hidden lg:flex lg:space-x-3">
                 <div class="dropdown dropdown-end space-x-3">
                     <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                     <div class="indicator">
+                     <div class="indicator ">
                        <svg xmlns="http://www.w3.org/2000/svg" 
+                       class="animate-ping"
                            x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
                            <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
-                           </svg>
+                               
+                        </svg>
                        <svg
                          xmlns="http://www.w3.org/2000/svg"
                          class="h-5 w-5"
@@ -83,7 +85,7 @@
                      </div>
                    </div>
                 </div>
-                <button class="btn border-2 border-[#179800] bg-white text-black text-xl font-normal">Login</button>
+                <button class="btn border-2 border-[#179800] bg-white text-black text-xl font-normal ">Login</button>
                 <button class="btn bg-[#179800] text-white text-xl font-normal" >Register</button>
               </div>
 
@@ -155,7 +157,7 @@
             <div class="flex-1 bg-gradient-to-r from-[#53DB3A] to-white pt-11 pl-7 rounded-lg">
                 <h3 class="text-white font-normal text-2xl adlam-font mb-5 lg:text-3xl">30% Off</h3>
                 <p class="font-normal text-sm text-[#111111]/7 mb-4 lg:text-base pr-12">Discover a world to treats, toys, and <br> essentials handpicked for</p>
-                <button class="btn bg-white text-[#111111] font-normal text-base lg:text-xl">Buy Now</button>
+                <button class="btn bg-white text-[#111111] font-normal text-base lg:text-xl lg:animate-ping">Buy Now</button>
                 <div class="flex justify-end">
                     <img src="./c2-assets/vegetable-offer.png" alt="Vegatable Image " class="w-1/2 h-1/2" >
                 </div>
