--- a/index.html
+++ b/index.html
@@ -465,11 +465,11 @@
             <h3 class="font-semibold text-5xl text-center text-[#111111] mb-14 ">Frequently Asked <span class="text-[#179800]">Questions</span></h3>
   
             <div class="hero ">
-              <div class="hero-content flex flex-col justify-center lg:flex-row space-x-24">
-                <div class="w-1/2">
+              <div class="hero-content flex flex-col justify-center items-center lg:flex-row lg:gap-x-24">
+                <div class="w-3/4">
                   <img
                   src="./c2-assets/faq.png"
-                  class="max-w-sm rounded-lg shadow-2xl" />
+                  class=" rounded-lg shadow-2xl" />
                 </div>
 
                 <div class="flex justify-center items-center">
